@@ -1,4 +1,5 @@
 == 0.6.4 Sexy Lobster release
+ * Fix error when stopping server on UNIX domain socket, fixes #42
  * Rescue errors in Connection#get_peername more gracefully, setting REMOTE_ADDR to nil, fixes #43
 
 == 0.6.3 Ninja Cookie release
